Prevent permissions icons from wrapping when panel slider moves across the card tree. re #3793

--- a/arches/app/media/css/arches.css
+++ b/arches/app/media/css/arches.css
@@ -11595,8 +11595,12 @@ a.jstree-anchor.permissions-widget {
     color: #ccc;
     cursor: default;
     pointer-events: none;
+    overflow-x: auto;
 }
 
+a.jstree-anchor.permissions-card {
+    overflow-x: auto;
+}
 
 .jstree-default .card-designer-tree li {
     background-image: url("tree/32px.png");
